Bug 30377 - -r (groom w/ regex) ignores -X
Summary: -r (groom w/ regex) ignores -X
Status: RESOLVED FIXED
Alias: None
Product: elfutils
Classification: Unclassified
Component: debuginfod (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Frank Ch. Eigler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-21 17:57 UTC by Frank Ch. Eigler
Modified: 2023-04-23 01:13 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2023-04-21 17:57:45 UTC
There's a logic bug in the groom process wherein artifacts related to
a file excluded via the -X regex are not actually removed.  && -> ||
to fix.
Comment 1 Frank Ch. Eigler 2023-04-23 01:13:15 UTC
commit cded466a74d06fe1dff047b33e630f8a6aa721e1 
Author: Frank Ch. Eigler <fche@redhat.com>
Date:   Fri Apr 21 17:04:08 2023 -0400

    PR30377: fix debuginfod -r -X combination
    
    Until this fix, debuginfod -r -X '.*' didn't trigger groom-time removal
    of everything, because the -I include regex overrode it.  Corrected logic
    to match the scan-time tie-breaking between -I / -X.