PR30377: fix debuginfod -r -X combination

Until this fix, debuginfod -r -X '.*' didn't trigger groom-time removal
of everything, because the -I include regex overrode it.  Corrected logic
to match the scan-time tie-breaking between -I / -X.

Signed-off-by: Frank Ch. Eigler <fche@redhat.com>